# internal/handlers/userHandlers.go
@@ -2,10 +2,9 @@ package handlers
 
 import (
 	"apiRUKA/internal/models"
-	"apiRUKA/internal/userService" // Исправлен импорт (было `Userservice` с заглавной)
+	"apiRUKA/internal/userService"
 	"apiRUKA/internal/web/users"
 	"context"
-	"time"
 )
 
 type UserHandler struct {
@@ -23,20 +22,11 @@ func (h *UserHandler) GetUsers(ctx context.Context, request users.GetUsersReques
 		return nil, err
 	}
 
-	// Преобразование списка пользователей в OpenAPI-формат
 	var response []users.User
 	for _, u := range usersList {
-		var deletedAt *time.Time
-		if u.DeletedAt.Valid { // Учитываем, если поле DeletedAt может быть NULL
-			deletedAt = &u.DeletedAt.Time
-		}
-
 		response = append(response, users.User{
-			Id:        &u.ID,
-			Email:     &u.Email,
-			CreatedAt: &u.CreatedAt,
-			UpdatedAt: &u.UpdatedAt,
-			DeletedAt: deletedAt,
+			Id:    &u.ID,
+			Email: &u.Email,
 		})
 	}
 
@@ -57,21 +47,11 @@ func (h *UserHandler) PostUsers(ctx context.Context, request users.PostUsersRequ
 		return nil, err
 	}
 
-	// Обрабатываем возможное NULL-значение для DeletedAt
-	var deletedAt *time.Time
-	if newUser.DeletedAt.Valid {
-		deletedAt = &newUser.DeletedAt.Time
-	}
-
 	// Преобразование структуры в OpenAPI-модель
 	response := users.User{
-		Id:        &newUser.ID,
-		Email:     &newUser.Email,
-		CreatedAt: &newUser.CreatedAt,
-		UpdatedAt: &newUser.UpdatedAt,
-		DeletedAt: deletedAt, // Теперь правильно передаем указатель
+		Id:    &newUser.ID,
+		Email: &newUser.Email,
 	}
-
 	return users.PostUsers201JSONResponse(response), nil
 }
 
@@ -80,7 +60,6 @@ func (h *UserHandler) PatchUsersId(ctx context.Context, request users.PatchUsers
 	if request.Body == nil {
 		return users.PatchUsersId200JSONResponse{}, nil
 	}
-
 	updatedUser, err := h.service.UpdateUserByID(uint(request.Id), models.User{
 		Email:    *request.Body.Email,
 		Password: *request.Body.Password,
@@ -88,22 +67,11 @@ func (h *UserHandler) PatchUsersId(ctx context.Context, request users.PatchUsers
 	if err != nil {
 		return nil, err
 	}
-
-	// Учитываем возможность NULL в DeletedAt
-	var deletedAt *time.Time
-	if updatedUser.DeletedAt.Valid {
-		deletedAt = &updatedUser.DeletedAt.Time
-	}
-
 	// Преобразование структуры
 	response := users.User{
-		Id:        &updatedUser.ID,
-		Email:     &updatedUser.Email,
-		CreatedAt: &updatedUser.CreatedAt,
-		UpdatedAt: &updatedUser.UpdatedAt,
-		DeletedAt: deletedAt,
+		Id:    &updatedUser.ID,
+		Email: &updatedUser.Email,
 	}
-
 	return users.PatchUsersId200JSONResponse(response), nil
 }
 
