# openapi/openapi.yaml
@@ -186,16 +186,6 @@ components:
           format: uint
         email:
           type: string
-        created_at:
-          type: string
-          format: date-time
-        updated_at:
-          type: string
-          format: date-time
-        deleted_at:
-          type: string
-          format: date-time
-          nullable: true
 
     UserCreate:
       type: object
